# NetGrid

./: .gitignore  README.md
Project/: CMakeLists.txt
Project/API/: IKernel.h  IModule.h
Project/Config/: link.bat  link.sh  start.bat  start_master.bat  测试文件.xlsm
Project/Config/core/: server_config.xml
Project/Config/core/echo/: config.xml  module.xml
Project/Config/core/gate/: config.xml  module.xml
Project/Config/core/luatest/: module.xml
Project/Config/core/master/: config.xml  module.xml
Project/Config/core/service_config/: master.xml
Project/Config/core/slave/: config.xml  module.xml
Project/Config/core/test/: .module.xml.swp  config.xml  module.xml
Project/Config/core/unittest/: module.xml
Project/Config/envir/: config.xml  test.xml
Project/Config/envir/object/: root.xml
Project/Config/envir/script/: hello.lua  link.lua  mydump.lua
Project/Config/sh/linux/: start.sh
Project/Config/sh/win/: start.bat  start_gate.bat  start_luatest.bat  start_master.bat  start_relation.bat  start_test.bat  start_unittest.bat  windows.txt
Project/Kernel/: CMakeLists.txt  Kernel.cpp  Kernel.h  main.cpp
Project/Kernel/Async/: AsyncQueue.cpp  AsyncQueue.h  AsyncThread.cpp  AsyncThread.h
Project/Kernel/Config/: Configmgr.cpp  Configmgr.h
Project/Kernel/Exception/: ExceptionMgr.cpp  ExceptionMgr.h  i386-signal.h  segvcatch.cpp  x86_64-signal.h
Project/Kernel/Frame/: FrameMgr.cpp  FrameMgr.h
Project/Kernel/Interface/: IApplication.h  IConfigmgr.h  ICore.h  IFrameMgr.h  ILogger.h  IModulemgr.h  INetEngine.h  IProfileMgr.h  ITimerMgr.h
Project/Kernel/Log/: LogFile.cpp  LogFile.h  Logger.cpp  Logger.h
Project/Kernel/Module/: Modulemgr.cpp  Modulemgr.h
Project/Kernel/Net/: IOEngine_Epoll.cpp  IOEngine_Epoll.h  IOEngine_IOCP.cpp  IOEngine_IOCP.h  NetConnection.cpp  NetConnection.h  NetEngine.cpp  NetEngine.h  NetIOEngine.cpp  NetIOEngine.h  NetListenerMgr.cpp  NetListenerMgr.h  NetService.cpp  NetService.h  TcpConnection.cpp  TcpConnection.h
Project/Kernel/Proflie/: ProfileMgr.cpp  ProfileMgr.h
Project/Kernel/Test/: Test.cpp  Test.h
Project/Kernel/Timer/: TimerMgr.cpp  TimerMgr.h  TimerWheel.cpp  TimerWheel.h
Project/Public/: BinaryStream.h  BitMark.h  CDumper.cpp  CDumper.h  CircularBuffer.h  CircularQueue.h  Convert.h  IReader.h  IStream.h  LinSys.h  MultiSys.h  MysqlBuilder.cpp  MysqlBuilder.h  Singleton.h  TCallBack.h  TDynArray.h  TDynPool.h  THeap.h  TIndexPool.h  TList.h  TSkipList.cpp  TSkipList.h  TString.h  Tools.cpp  Tools.h  Tools_Net.cpp  Tools_Net.h  Tools_file.cpp  Tools_file.h  Tools_time.cpp  Tools_time.h  WinSys.h  XmlReader.cpp  XmlReader.h
Project/Public/2D/: RTree.h  RectTree.cpp  RectTree.h  SearchTree.h  TRectTree.h  TZoneAOI.h  Vector.h  Zone.cpp  Zone.h  ZoneAOI.cpp  ZoneAOI.h
Project/Public/time/: StopWatch.h
Project/Thridlibrary/: 三方库清单.txt
Project/Thridlibrary/include/unwind/: libunwind-common.h  linux.rar
Project/Thridlibrary/libevent/source/: Makefile.nmake.x64.debug  Makefile.nmake.x64.release
Project/Thridlibrary/linux/: libevent.la  libevent_core.la  libevent_extra.la  libevent_pthreads.la  libunwind-setjmp.so.0  libunwind-x86_64.so.8  libunwind.so.8
Project/Thridlibrary/pkg/: AttrGenerator.rar  MysqlConnector.rar  lua-5.3.4.rar
Project/Thridlibrary/windows/debug/: libevent_extras.lib  lualib - 副本.lib
Project/Thridlibrary/windows/release/: libevent_extras.lib  lualib.lib
Project/logic/: AttrGenerator.rar  CMakeLists.txt
Project/logic/AoiTest/: CMakeLists.txt  main.cpp
Project/logic/CacheDB/: CMakeLists.txt  CacheDB.cpp  CacheDB.h  main.cpp
Project/logic/Core/: CMakeLists.txt
Project/logic/Core/MysqlMgr/: CMakeLists.txt  DBConnection.cpp  DBConnection.h  MysqlBase.cpp  MysqlBase.h  MysqlMgr.cpp  MysqlMgr.h  main.cpp
Project/logic/Define/: CommonMsgDefine.h  FrameworkDefine.h  Game_tools.h  MemberDef.h  MemberDefine.h
Project/logic/Define/Proto/: CMakeLists.txt  Test.cs  proto_build.bat  test.pb.cc  test.pb.h  test.proto
Project/logic/Framework/: CMakeLists.txt
Project/logic/Framework/CacheDB/: CMakeLists.txt  CacheDB.cpp  CacheDB.h
Project/logic/Framework/Cluster/: CMakeLists.txt  Cluster.cpp  Cluster.h  ClusterController.cpp  ClusterController.h  ClusterInfo.cpp  ClusterInfo.h  main.cpp
Project/logic/Framework/FileMointer/: CMakeLists.txt  FileMointer.cpp  FileMointer.h  main.cpp
Project/logic/Framework/LoginControl/: CMakeLists.txt  LoginControl.cpp  LoginControl.h  main.cpp
Project/logic/Framework/NodeProto/: CMakeLists.txt
Project/logic/Framework/ObjectMgr/: CMakeLists.txt  CommonObject.cpp  CommonObject.h  ObjectDes.cpp  ObjectDes.h  ObjectMember.cpp  ObjectMember.h  ObjectMgr.cpp  ObjectMgr.h  PODObject.cpp  PODObject.h  RowObject.cpp  RowObject.h  TableObject.cpp  TableObject.h  main.cpp
Project/logic/Framework/ProxyMgr/: CMakeLists.txt  Design.txt  Proxy.cpp  Proxy.h  ProxyMgr.cpp  ProxyMgr.h  ProxyService.cpp  ProxyService.h  main.cpp
Project/logic/Framework/RankMgr/: CMakeLists.txt  main.cpp  (+2 more)
Project/logic/Interface/: IAI.h  IAoiTest.h  ICacheDB.h  ICluster.h  IDataInterchange.h  IEchoServer.h  IEventEngine.h  IFileMointer.h  IGate.h  IHarbor.h  IHttpMgr.h  IIpcShareMemory.h  ILoginControl.h  ILuaTest.h  IMaster.h  IMysqlMgr.h  INetClient.h  INetNode.h  INetServer.h  INetService.h  INetServiceTest.h  IObjectMgr.h  IProxyMgr.h  IRankMgr.h  IRedis.h  IRedisClient.h  IRobot.h  IScriptEngine.h  ISearch.h  ISlave.h  ITest.h  ITextCommand.h  IUnitTest.h
Project/logic/Logic/: CMakeLists.txt
Project/logic/NetClient/: CMakeLists.txt  NetClient.cpp  NetClient.h  main.cpp
Project/logic/NetNode/: CMakeLists.txt  NetNode.cpp  NetNode.h  main.cpp
Project/logic/NetServer/: CMakeLists.txt  NetServer.cpp  NetServer.h  main.cpp
Project/logic/Redis/: CMakeLists.txt  Redis.cpp  main.cpp
Project/logic/ScriptEngine/: CMakeLists.txt  ScriptEngine.cpp  ScriptEngine.h  main.cpp
Project/logic/Test/: CMakeLists.txt  Test.cpp  Test.h
Project/tools/: AttrGenerator.rar  vs_2015_debug.rar
Project/tools/debug/: libevent.lib  libevent_core.lib  libevent_extras.lib  lualib.lib
(+199 files in other folders)
