SET(LOGIC_INTERFACE_DIR
	"${PROJECT_SOURCE_DIR}/logic/Interface"
)

SET(LOGIC_DEFINE_DIR
	"${PROJECT_SOURCE_DIR}/logic/Define"
)

SET(LOGIC_DEFINE
	"${LOGIC_DEFINE_DIR}/FrameworkDefine.h"
)

#SET(LOGIC_INTERFACE
#	"${LOGIC_INTERFACE_DIR}/IDataInterchange.h"
#	"${LOGIC_INTERFACE_DIR}/ITest.h"
#	"${LOGIC_INTERFACE_DIR}/IRedis.h"
#	"${LOGIC_INTERFACE_DIR}/ICacheDB.h"
#	"${LOGIC_INTERFACE_DIR}/IAoiTest.h"
#	"${LOGIC_INTERFACE_DIR}/INetServer.h"
#	"${LOGIC_INTERFACE_DIR}/IScriptEngine.h"
#	"${LOGIC_INTERFACE_DIR}/IProxyMgr.h"
#)
FILE(GLOB LOGIC_INTERFACE "${PROJECT_SOURCE_DIR}/logic/Interface/*.*")

#ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/logic/Test/)
#ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/logic/Redis/)
#ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/logic/CacheDB/)
#ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/logic/NetServer/)
#ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/logic/AoiTest/)
#ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/logic/ScriptEngine/)
#ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/logic/ProxyMgr/)
FILE(GLOB LOGIC_DIRS "${PROJECT_SOURCE_DIR}/logic/*")
FOREACH(LOGIC_DIR ${LOGIC_DIRS})
	string( COMPARE NOTEQUAL ${LOGIC_DIR} "${PROJECT_SOURCE_DIR}/logic/AttrGenerator.exe" NOT_1)
	string( COMPARE NOTEQUAL ${LOGIC_DIR} "${PROJECT_SOURCE_DIR}/logic/AttrGenerator.rar" NOT_2)
	string( COMPARE NOTEQUAL ${LOGIC_DIR} "${PROJECT_SOURCE_DIR}/logic/CMakeLists.txt" NOT_3)
	string( COMPARE NOTEQUAL ${LOGIC_DIR} "${PROJECT_SOURCE_DIR}/logic/Define" NOT_4)
	string( COMPARE NOTEQUAL ${LOGIC_DIR} "${PROJECT_SOURCE_DIR}/logic/Interface" NOT_5)
	IF(NOT_1 AND NOT_2 AND NOT_3 AND NOT_4 AND NOT_5)
		MESSAGE("添加子目录:${LOGIC_DIR}")
		ADD_SUBDIRECTORY(${LOGIC_DIR})
	ENDIF()
ENDFOREACH()
