#cmake file for module AoiTest
#author:xuping
#created:2017/5/30 20:05:12

SET(AOITEST_DIR
	"${PROJECT_SOURCE_DIR}/logic/AoiTest/"
)
SET(AOITEST
	"${AOITEST_DIR}/main.cpp"
	"${AOITEST_DIR}/AoiTest.cpp"
	"${AOITEST_DIR}/AoiTest.h"
)
IF(WIN32)
	INCLUDE_DIRECTORIES(
		${API_DIR}
		${PUBLIC_DIR}
		${THIRD_LIBRARIES_INCLUDE_DIR}/DbgHelp.h
        ${2D_DIR}
		${COMMON_TIME_DIR}
		${TINYXML_DIR}
		${LOGIC_INTERFACE_DIR}
	)
ENDIF(WIN32)

IF(LINUX)
	INCLUDE_DIRECTORIES(
        ${API_DIR}
        ${PUBLIC_DIR}
        ${2D_DIR}
		${COMMON_TIME_DIR}
		${TINYXML_DIR}
		${LOGIC_INTERFACE_DIR}
	)
ENDIF(LINUX)
MESSAGE(STATUS ${LOGIC_INTERFACE})
SOURCE_GROUP( Api	FILES ${API})
SOURCE_GROUP( Public\\Tinyxml FILES ${TINYXML})
SOURCE_GROUP( Public\\2D FILES ${2D})
SOURCE_GROUP( Public\\time FILES ${COMMON_TIME})
SOURCE_GROUP( Public FILES ${PUBLIC})
SOURCE_GROUP( Interface FILES ${LOGIC_INTERFACE})
SOURCE_GROUP( \\ FILES ${AOITEST})

IF(WIN32)
	SET(THIRD_LIB_DEBUG
	"${THIRD_LIBRARIES_DEBUG_DIR}/DbgHelp.Lib"
	)
	SET(THIRD_LIB_RELEASE
	)
ENDIF(WIN32)

IF(LINUX)

ENDIF(LINUX)

ADD_LIBRARY( AoiTest SHARED
	${PUBLIC}
	${API}
	${LOGIC_INTERFACE}
	${TINYXML}
	${2D}
	${COMMON_TIME}
	${AOITEST}
)