FILE(GLOB LOGIC_DIRS "${PROJECT_SOURCE_DIR}/logic/Core/*")
FOREACH(LOGIC_DIR ${LOGIC_DIRS})
	MESSAGE("添加子目录:${LOGIC_DIR}")
	string( COMPARE NOTEQUAL ${LOGIC_DIR} "${PROJECT_SOURCE_DIR}/logic/Core/CMakeLists.txt" NOT_CMAKELISET)
	IF(NOT_CMAKELISET)
		ADD_SUBDIRECTORY(${LOGIC_DIR})
	ENDIF()
ENDFOREACH()
