#cmake file for module NetNode
#author:xuping
#created:2017/6/13 0:05:47

SET(NETNODE_DIR
	"${PROJECT_SOURCE_DIR}/logic/NetNode/"
)
SET(NETNODE
	"${NETNODE_DIR}/main.cpp"
	"${NETNODE_DIR}/NetNode.cpp"
	"${NETNODE_DIR}/NetNode.h"
)
IF(WIN32)
	INCLUDE_DIRECTORIES(
		${API_DIR}
		${PUBLIC_DIR}
		${THIRD_LIBRARIES_INCLUDE_DIR}/DbgHelp.h
        ${2D_DIR}
		${COMMON_TIME_DIR}
		${TINYXML_DIR}
		${LOGIC_INTERFACE_DIR}
	)
ENDIF(WIN32)

IF(LINUX)
	INCLUDE_DIRECTORIES(
        ${API_DIR}
        ${PUBLIC_DIR}
        ${2D_DIR}
		${COMMON_TIME_DIR}
		${TINYXML_DIR}
		${LOGIC_INTERFACE_DIR}
	)
ENDIF(LINUX)
MESSAGE(STATUS ${LOGIC_INTERFACE})
SOURCE_GROUP( Api	FILES ${API})
SOURCE_GROUP( Public\\Tinyxml FILES ${TINYXML})
SOURCE_GROUP( Public\\2D FILES ${2D})
SOURCE_GROUP( Public\\time FILES ${COMMON_TIME})
SOURCE_GROUP( Public FILES ${PUBLIC})
SOURCE_GROUP( Interface FILES ${LOGIC_INTERFACE})
SOURCE_GROUP( \\ FILES ${NETNODE})

IF(WIN32)
	SET(THIRD_LIB_DEBUG
	"${THIRD_LIBRARIES_DEBUG_DIR}/DbgHelp.Lib"
	)
	SET(THIRD_LIB_RELEASE
	)
ENDIF(WIN32)

IF(LINUX)

ENDIF(LINUX)

ADD_LIBRARY( NetNode SHARED
	${PUBLIC}
	${API}
	${LOGIC_INTERFACE}
	${TINYXML}
	${2D}
	${COMMON_TIME}
	${NETNODE}
)