#cmake file for module MysqlMgr
#author:XuPing
#created:2019/5/20 16:09:38

SET(MYSQLMGR
	"${CMAKE_CURRENT_SOURCE_DIR}/main.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/MysqlMgr.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/MysqlMgr.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/DBConnection.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/DBConnection.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/MysqlBase.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/MysqlBase.h"
	
)
IF(WIN32)
	INCLUDE_DIRECTORIES(
		${API_DIR}
		${PUBLIC_DIR}
		${THIRD_LIBRARIES_INCLUDE_DIR}/DbgHelp.h
		${THIRD_LIBRARIES_INCLUDE_DIR}/mysql/include
        ${2D_DIR}
		${COMMON_TIME_DIR}
		${TINYXML_DIR}
		${LOGIC_INTERFACE_DIR}
		${LOGIC_DEFINE_DIR}
	)
ENDIF(WIN32)

IF(LINUX)
	INCLUDE_DIRECTORIES(
        ${API_DIR}
        ${PUBLIC_DIR}
		${THIRD_LIBRARIES_INCLUDE_DIR}/mysql/include		
        ${2D_DIR}
		${COMMON_TIME_DIR}
		${TINYXML_DIR}
		${LOGIC_INTERFACE_DIR}
		${LOGIC_DEFINE_DIR}
	)
ENDIF(LINUX)
MESSAGE(STATUS ${LOGIC_INTERFACE})
SOURCE_GROUP( Api	FILES ${API})
SOURCE_GROUP( Define FILES ${LOGIC_DEFINE})
SOURCE_GROUP( Public\\Tinyxml FILES ${TINYXML})
SOURCE_GROUP( Public\\2D FILES ${2D})
SOURCE_GROUP( Public\\time FILES ${COMMON_TIME})
SOURCE_GROUP( Public FILES ${PUBLIC})
SOURCE_GROUP( Interface FILES ${LOGIC_INTERFACE})
SOURCE_GROUP( \\ FILES ${MYSQLMGR})

IF(WIN32)
	SET(THIRD_LIB_DEBUG
		"${THIRD_LIBRARIES_DEBUG_DIR}/DbgHelp.Lib"
		"${THIRD_LIBRARIES_DEBUG_DIR}/libmysql.lib"
	)
	SET(THIRD_LIB_RELEASE
	)
ENDIF(WIN32)

IF(LINUX)
	SET(THIRD_LIB_DEBUG
	)
	SET(THIRD_LIB_RELEASE
	)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lmysqlclient")
ENDIF(LINUX)

ADD_LIBRARY( MysqlMgr SHARED
	${PUBLIC}
	${API}
	${LOGIC_INTERFACE}
	${LOGIC_DEFINE}
	${TINYXML}
	${COMMON_TIME}
	${MYSQLMGR}
)

SET_PROPERTY(TARGET MysqlMgr PROPERTY FOLDER "Core")

ADD_DEPENDENCIES(MysqlMgr NetGrid)
TARGET_LINK_LIBRARIES( MysqlMgr
	${KERNEL_LIBD}
	${KERNEL_LIB}
    ${THIRD_LIB_DEBUG}
    ${THIRD_LIB_RELEASE}
)