#cmake file for module NodeProto
#author:XuPing
#created:2019/6/19 11:31:19

SET(NODEPROTO
	"${PROJECT_SOURCE_DIR}/logic/Define/Proto/test.pb.h"
	"${PROJECT_SOURCE_DIR}/logic/Define/Proto/test.pb.cc"
)
IF(WIN32)
	INCLUDE_DIRECTORIES(
		${THIRD_LIBRARIES_INCLUDE_DIR}/google
	)
ENDIF(WIN32)

IF(LINUX)
	INCLUDE_DIRECTORIES(
        ${API_DIR}
        ${PUBLIC_DIR}
        ${2D_DIR}
		${COMMON_TIME_DIR}
		${TINYXML_DIR}
		${LOGIC_INTERFACE_DIR}
		${LOGIC_DEFINE_DIR}
	)
ENDIF(LINUX)
SOURCE_GROUP( \\ FILES ${NODEPROTO})

IF(WIN32)
	SET(THIRD_LIB_DEBUG
		debug "${THIRD_LIBRARIES_DEBUG_DIR}/libprotobufd.lib"		
	)
	SET(THIRD_LIB_RELEASE	
	)
	ADD_LIBRARY( NodeProto STATIC
	${NODEPROTO}
	)

ENDIF(WIN32)

IF(LINUX)
	SET(THIRD_LIB_DEBUG	
					optimized "${THIRD_LIBRARIES_DEBUG_DIR}/libprotobuf.a"
	)
	SET(THIRD_LIB_RELEASE	
				optimized "${THIRD_LIBRARIES_RELEASE_DIR}/libprotobuf.a"
	)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DPROTO_EXPORT")
	ADD_LIBRARY( NodeProto SHARED
	${NODEPROTO}
	)
ENDIF(LINUX)


SET_PROPERTY(TARGET NodeProto PROPERTY FOLDER "Framework")

TARGET_LINK_LIBRARIES( NodeProto
    ${THIRD_LIB_DEBUG}
    ${THIRD_LIB_RELEASE}
)