#cmake file for module ScriptEngine
#author:xuping
#created:2017/8/1 21:33:16

SET(SCRIPTENGINE
	"${CMAKE_CURRENT_SOURCE_DIR}/main.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/ScriptEngine.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/ScriptEngine.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/LuaInterchange.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/LuaInterchange.h"

)
IF(WIN32)
	INCLUDE_DIRECTORIES(
		${API_DIR}
		${PUBLIC_DIR}
		${THIRD_LIBRARIES_INCLUDE_DIR}/DbgHelp.h
		${THIRD_LIBRARIES_INCLUDE_DIR}/lua/include
        ${2D_DIR}
		${COMMON_TIME_DIR}
		${TINYXML_DIR}
		${LOGIC_INTERFACE_DIR}
		${LOGIC_DEFINE_DIR}				
	)
ENDIF(WIN32)

IF(LINUX)
	INCLUDE_DIRECTORIES(
        ${API_DIR}
        ${PUBLIC_DIR}
		${THIRD_LIBRARIES_INCLUDE_DIR}/lua/include		
        ${2D_DIR}
		${COMMON_TIME_DIR}
		${TINYXML_DIR}
		${LOGIC_INTERFACE_DIR}
		${LOGIC_DEFINE_DIR}				
	)
ENDIF(LINUX)
MESSAGE(STATUS ${LOGIC_INTERFACE})
SOURCE_GROUP( Api	FILES ${API})
SOURCE_GROUP( Define FILES ${LOGIC_DEFINE})
SOURCE_GROUP( Public\\Tinyxml FILES ${TINYXML})
SOURCE_GROUP( Public\\2D FILES ${2D})
SOURCE_GROUP( Public\\time FILES ${COMMON_TIME})
SOURCE_GROUP( Public FILES ${PUBLIC})
SOURCE_GROUP( Interface FILES ${LOGIC_INTERFACE})
SOURCE_GROUP( \\ FILES ${SCRIPTENGINE})

IF(WIN32)
	SET(THIRD_LIB_DEBUG
	    debug "${THIRD_LIBRARIES_DEBUG_DIR}/lualib.lib"
	)
	SET(THIRD_LIB_RELEASE
        optimized "${THIRD_LIBRARIES_RELEASE_DIR}/lualib.lib"
	)
ENDIF(WIN32)

IF(LINUX)
	SET(THIRD_LIB_DEBUG
	    debug "${THIRD_LIBRARIES_DEBUG_DIR}/liblua.a"
	)
	SET(THIRD_LIB_RELEASE
        optimized "${THIRD_LIBRARIES_RELEASE_DIR}/liblua.a"
	)
ENDIF(LINUX)

ADD_LIBRARY( ScriptEngine SHARED
	${PUBLIC}
	${API}
	${LOGIC_INTERFACE}
	${LOGIC_DEFINE}
	${TINYXML}
	${2D}
	${COMMON_TIME}
	${SCRIPTENGINE}
)

TARGET_LINK_LIBRARIES(	ScriptEngine
	${THIRD_LIB_DEBUG}
	${THIRD_LIB_RELEASE}
)

SET_PROPERTY(TARGET ScriptEngine PROPERTY FOLDER "Framework")